--- a/index.html
+++ b/index.html
@@ -45567,59 +45567,59 @@
                                                                 <div class="col-xs-12">
                                                                     <div class="field-control-wrapper"><select class="elq-item-select custom-data" id="state" name="stateProv" style="width:100%;" data-value="">
                                                                             <option value="">-- Please Select --</option>
-                                                                            <option value="AK">AK</option>
-                                                                            <option value="AL">AL</option>
-                                                                            <option value="AR">AR</option>
-                                                                            <option value="AZ">AZ</option>
-                                                                            <option value="CA">CA</option>
-                                                                            <option value="CO">CO</option>
-                                                                            <option value="CT">CT</option>
-                                                                            <option value="DC">DC</option>
-                                                                            <option value="DE">DE</option>
-                                                                            <option value="FL">FL</option>
-                                                                            <option value="GA">GA</option>
-                                                                            <option value="HI">HI</option>
-                                                                            <option value="IA">IA</option>
-                                                                            <option value="ID">ID</option>
-                                                                            <option value="IL">IL</option>
-                                                                            <option value="IN">IN</option>
-                                                                            <option value="KS">KS</option>
-                                                                            <option value="KY">KY</option>
-                                                                            <option value="LA">LA</option>
-                                                                            <option value="MA">MA</option>
-                                                                            <option value="MD">MD</option>
-                                                                            <option value="ME">ME</option>
-                                                                            <option value="MI">MI</option>
-                                                                            <option value="MN">MN</option>
-                                                                            <option value="MO">MO</option>
-                                                                            <option value="MS">MS</option>
-                                                                            <option value="MT">MT</option>
-                                                                            <option value="NC">NC</option>
-                                                                            <option value="ND">ND</option>
-                                                                            <option value="NE">NE</option>
-                                                                            <option value="NH">NH</option>
-                                                                            <option value="NJ">NJ</option>
-                                                                            <option value="NM">NM</option>
-                                                                            <option value="NV">NV</option>
-                                                                            <option value="NY">NY</option>
-                                                                            <option value="OH">OH</option>
-                                                                            <option value="OK">OK</option>
-                                                                            <option value="OR">OR</option>
-                                                                            <option value="PA">PA</option>
-                                                                            <option value="RI">RI</option>
-                                                                            <option value="SC">SC</option>
-                                                                            <option value="SD">SD</option>
-                                                                            <option value="TN">TN</option>
-                                                                            <option value="TX">TX</option>
-                                                                            <option value="UT">UT</option>
-                                                                            <option value="VA">VA</option>
-                                                                            <option value="VT">VT</option>
-                                                                            <option value="WA">WA</option>
-                                                                            <option value="WI">WI</option>
-                                                                            <option value="WV">WV</option>
-                                                                            <option value="WY">WY</option>
-                                                                            <option value="GU">GU</option>
-                                                                            <option value="PR">PR</option>
+                                                                            <option value="Alaska">AK</option>
+                                                                            <option value="Alabama">AL</option>
+                                                                            <option value="Arkansas">AR</option>
+                                                                            <option value="Arizona">AZ</option>
+                                                                            <option value="California">CA</option>
+                                                                            <option value="Colorado">CO</option>
+                                                                            <option value="Connecticut">CT</option>
+                                                                            <option value="District of Columbia">DC</option>
+                                                                            <option value="Delaware">DE</option>
+                                                                            <option value="Florida">FL</option>
+                                                                            <option value="Georgia">GA</option>
+                                                                            <option value="Hawaii">HI</option>
+                                                                            <option value="Iowa">IA</option>
+                                                                            <option value="Idaho">ID</option>
+                                                                            <option value="Illinois">IL</option>
+                                                                            <option value="Indiana">IN</option>
+                                                                            <option value="Kansas">KS</option>
+                                                                            <option value="Kentucky">KY</option>
+                                                                            <option value="Lousisana">LA</option>
+                                                                            <option value="Massachusetts">MA</option>
+                                                                            <option value="Maryland">MD</option>
+                                                                            <option value="Maine">ME</option>
+                                                                            <option value="Michigan">MI</option>
+                                                                            <option value="Minnesota">MN</option>
+                                                                            <option value="Missouri">MO</option>
+                                                                            <option value="Mississippi">MS</option>
+                                                                            <option value="Montana">MT</option>
+                                                                            <option value="North Carolina">NC</option>
+                                                                            <option value="North Dakota">ND</option>
+                                                                            <option value="Nebraska">NE</option>
+                                                                            <option value="New Hampshire">NH</option>
+                                                                            <option value="New Jersey">NJ</option>
+                                                                            <option value="New Mexico">NM</option>
+                                                                            <option value="Nevada">NV</option>
+                                                                            <option value="New York">NY</option>
+                                                                            <option value="Ohio">OH</option>
+                                                                            <option value="Oklahoma">OK</option>
+                                                                            <option value="Oregon">OR</option>
+                                                                            <option value="Pennsylvania">PA</option>
+                                                                            <option value="Rhode Island">RI</option>
+                                                                            <option value="South Carolina">SC</option>
+                                                                            <option value="South Daokta">SD</option>
+                                                                            <option value="Tennessee">TN</option>
+                                                                            <option value="Texas">TX</option>
+                                                                            <option value="Utah">UT</option>
+                                                                            <option value="Virginia">VA</option>
+                                                                            <option value="Vermont">VT</option>
+                                                                            <option value="Washington">WA</option>
+                                                                            <option value="Wisconsin">WI</option>
+                                                                            <option value="West Virginia">WV</option>
+                                                                            <option value="Wyoming">WY</option>
+                                                                            <option value="Guam">GU</option>
+                                                                            <option value="Puerto Rico">PR</option>
                                                                             <option value="International">International</option>
                                                                         </select></div>
                                                                 </div>
@@ -45776,6 +45776,10 @@
     font-weight: bold !important;
     font-size: 20px;
 }
+
+#ps-group-embedded-brkg6grll label.ps-checkbox-clickable {
+    text-align: right;
+}
   </style>
 
 
@@ -45815,7 +45819,7 @@
                         <a href="https://emoneyadvisor.com/careers/">Careers</a>
                         <a href="https://emoneyadvisor.com/faq/">FAQs</a>
                     </div>
-                    <a href="https://emoneyadvisor.com/free-trial/" class="button orange" id="free-trial-button_footer">SUBMIT</a>
+                    <a href="https://emoneyadvisor.com/" class="button orange" id="free-trial-button_footer">SUBMIT</a>
                 </div>
             </div>
         </div>
