--- a/index.html
+++ b/index.html
@@ -45767,6 +45767,11 @@
     background: white !important;
 }
 
+.ps-contract-scroll {
+    display: block !important;
+}
+
+
 #ps-group-embedded-brkg6grll .ps-contract-title {
     text-align: center !important;
 }
