--- a/index.html
+++ b/index.html
@@ -44297,9 +44297,12 @@
                 </div> 
               <!-- Ending -->
 
-              <div id="contracts"></div>
+             
             </div>
         </div>
+        <div class="grid-x align-center">
+         <div id="contracts"></div>
+        </div> 
 
 <script type="text/javascript">
     
@@ -44351,6 +44354,11 @@
 #ps-group-embedded-brkg6grll label.ps-checkbox-clickable {
     text-align: right;
 }
+
+.b-lead-form__form-container {
+    padding-bottom: 0 !important;
+}
+
 
   </style>
 
